New CSS options, QR code for mobile access
- Connected CSS variables to new options in the Settings menu
- Settings menu updated
- Main menu now displays the local IP URL as a QR code for quick access on a mobile device
- new dependency for the above added to req.txt
- Fixed a few places with bad code

--- a/v4_simple_ut99/static/settings.json
+++ b/v4_simple_ut99/static/settings.json
@@ -2,5 +2,10 @@
   "eventName": "Event 2",
   "mapItemGap": "30px",
   "mapItemSize": "95px",
-  "scheduleDisplayWindow": 12
+  "scheduleDisplayWindow": 12,
+  "SeriesTopOffset": "5px",
+  "MapItemTxtWeight": 500,
+  "MapItemTxtColor": "#000",
+  "MapItemBg": 0.8,
+  "TeamsGap": "352px"
 }
